@@ -65,6 +65,8 @@ Mike Langley
   who did some quick bug-snooping.
 Andrew McNamara
   who found several bugs and pointed out a few improprieties.
+Carlos M. Gutierrez
+  for good bug reporting.  
 
 Note that this list is basically unordered and is not intended to convey
 the magnitude of any individual contribution.  Everyone who helps is
