@@ -25,6 +25,7 @@ while (($src,$dst) = splice(@ARGV,0,2)) {
       $line =~ s!(^  \$::LIBDIR\s*= ).*!\1\"$config->{'install_dir'}/lib\";!;
       $line =~ s!(^  \$::LISTDIR\s*= ).*!\1\"$config->{'lists_dir'}\";!;
       $line =~ s!(^  \$::TMPDIR\s*= ).*!\1\"$config->{'tmpdir'}\";!;
+      $line =~ s!(^  \$::WTMPDIR\s*= ).*!\1\"$config->{'wtmpdir'}\";!;
       $line =~ s!(^  \$::DEFDOM\s*= ).*!\1\"$ {$config->{'domains'}}[0]\";!;
       $line =~ s!(^  \$::UID\s*= ).*!\1\"$uid\";!;
       $line =~ s!(^  \$::GID\s*= ).*!\1\"$gid\";!;
