@@ -1,3 +1,9 @@
+Fri Apr  3 01:26:48 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
+
+	* Makefile.PL (configure): Query for wtmpdir.
+
+	* installbin: Expand WTMPDIR.
+
 Thu Apr  2 20:18:13 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
 
 	* postinstall (create_dirs): Create sessions directory so that we
